--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -11,12 +11,37 @@
   color: rgb(135,206,235);
 }
 
-.title-container{
+.title{
   width: 60%;
   margin: 0 auto;
-  text-align: center;
   padding-top:17px;
   text-transform: uppercase;
   font-size: 24px;
   font-weight: bold;
+  margin-left: 0;
+}
+
+.title-container{
+  display: flex;
+
+}
+
+.nav-links {
+  width: 30%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  padding-top: 20px;
+}
+li{
+  margin: 2px;
+
+}
+li:hover{
+  border-bottom: 1px solid rgb(135,206,235);
+}
+a{
+  text-decoration: none;
+  color:rgb(135,206,235);
 }
